# Copyright © 2024 The Johns Hopkins Applied Physics Laboratory LLC.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License, version
# 3, as published by the Free Software Foundation.  If you
# would like to purchase a commercial license for this software, please
# contact APL’s Tech Transfer at 240-592-0817 or
# techtransfer@jhuapl.edu.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public
# License along with this program.  If not, see
# <https://www.gnu.org/licenses/>.

[package]
name = "constellation-consensus-common"
description = "Common consensus protocol API for the Constellation distributed systems platform"
repository = "https://github.com/constellation-system/constellation-consensus-common"
vversion = "0.0.0"
authors = [ "Eric McCorkle <eric.mccorkle@jhuapl.edu>" ]
rust-version = "1.81"
license = "AGPL-3.0-only"
keywords = ["networking", "distributed systems", "consensus"]
categories = ["network-programming"]
exclude = [
    ".gitignore"
]
edition = "2018"

[features]
default = ["gssapi", "log", "openssl", "unix"]
gssapi = [
    "constellation-auth/gssapi",
    "constellation-common/gssapi"
]
log = [
    "dep:log",
    "constellation-auth/log",
    "constellation-common/log"
]
openssl = [
    "constellation-auth/openssl",
    "constellation-common/openssl"
]
unix = [
    "constellation-auth/unix",
    "constellation-common/unix"
]

[dependencies]
bitvec = { version = "1.0" }
constellation-auth = { git = "https://github.com/constellation-system/constellation-auth.git", branch = "project/tech-debt", default-features = false }
constellation-common = { git = "https://github.com/constellation-system/constellation-common.git", branch = "project/tech-debt", default-features = false }
log = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = { version = "0.10" }
serde_yaml = { version = "0.9" }
